@@ -524,6 +524,7 @@ Localization
         #LOC_BDArmory_PilotAI_Ejection = Ejection
         #LOC_BDArmory_EjectOnImpendingDoom = Eject If Doomed
 
+        #LOC_BDArmory_SliderResolution = Slider Resolution
         #LOC_BDArmory_UnclampTuning  = Unclamp tuning\u0020
         #LOC_BDArmory_UnclampTuning_enabledText = Unclamped
         #LOC_BDArmory_UnclampTuning_disabledText = Clamped
